Use Collectors for backwards compatibility